Correct parenthesis typo

--- a/notebooks/01_colab_final.ipynb
+++ b/notebooks/01_colab_final.ipynb
@@ -227,7 +227,7 @@
     "collapsed": false
    },
    "source": [
-    "### Training to establish a performance baseline)\n",
+    "### Training to establish a performance baseline\n",
     "\n",
     "L'entrainement se déroule suivant les configuration YAML dans le dossier `configs` (ex. `configs/cv_cifar10_fast.yaml` pour le smoke test). Pour la baseline nous allons utilisé la configuration `configs/cv_cifar10_baseline.yaml`."
    ]
